# Melchior

./: .gitignore  README.md  main.py  pyproject.toml
changelog.d/: +add-daemon.added.md  +add-towncrier.added.md  changelog_template.jinja
melchior/: __main__.py  daemon.py
melchior/daemon/: __init__.py  _ctx.py  connector.py  event.py  exception.py  interface.py  parse.py  service.py  util.py
melchior/shared/: __init__.py  creator.py  model.py  util.py  var.py
