[project]
name = "Melchior"
version = "0.0.1"
description = ""
authors = [
    { name = "nullqwertyuiop", email = "null@member.fsf.org" },
]
dependencies = [
    "ichika>=0.0.6",
    "graiax-shortcut>=0.2.1",
    "graia-broadcast>=0.19.2",
    "creart-graia>=0.1.5",
    "kayaku>=0.5.2",
    "pydantic>=1.10.7",
]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0 license" }

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.1",
    "black>=23.3.0",
    "towncrier>=22.12.0",
]

[tool.pdm.build]
includes = []

[tool.isort]
profile = "black"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/nullqwertyuiop/Melchior/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/nullqwertyuiop/Melchior/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "chore"
name = "Other tasks"
showcontent = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
